# proj-ams

./: .gitattributes  README.md  docker-compose.override.yaml  docker-compose.yaml
.github/workflows/: ci.yaml
django/: .dockerignore  Dockerfile  manage.py  pyproject.toml  requirements.txt
django/ams/: asgi.py  env.py  settings.py  urls.py  wsgi.py
django/ams/fixtures/: users.json
django/ams/static/js/: detail_modal.js
django/ams/templates/: base.html  layout.html
django/ams/templates/components/: delete_modal.html  detail_modal.html  navbar.html
django/ams/templates/cotton/: breadcrumb_link.html  breadcrumb_text.html  modal.html  navlink.html  stat.html
django/ams/templates/cotton/table/: index.html  td.html  tr.html
django/ams/templates/registration/: login.html
django/clients/: admin.py  forms.py  models.py  urls.py  views.py
django/clients/locale/pt_BR/LC_MESSAGES/: django.po
django/clients/migrations/: 0001_initial.py  0002_alter_address_city_alter_address_neighborhood_and_more.py  0003_alter_address_city_alter_address_neighborhood_and_more.py  0004_alter_client_annotations.py  0005_alter_client_options.py
django/clients/static/js/: clients_list.js
django/clients/templates/clients/: delete.html  detail.html  form.html  list.html  update.html
django/clients/templates/clients/components/: rows.html  stats.html
django/core/: loguru_middleware.py  models.py  views.py
django/docker/: build.sh  entrypoint.sh
django/envs/: ams.env  database.env
django/garments/: admin.py  apps.py  forms.py  models.py
django/garments/locale/pt_BR/LC_MESSAGES/: django.po
django/garments/migrations/: 0001_initial.py
django/garments/templates/garments/: form.html  list.html
django/garments/templates/materials/: list.html
django/garments/urls/: garments.py  materials.py
django/garments/views/: __init__.py  garments.py  materials.py
django/locale/pt_BR/LC_MESSAGES/: django.po
django/orders/: admin.py  forms.py  models.py
django/orders/locale/pt_BR/LC_MESSAGES/: django.po
django/orders/migrations/: 0001_initial.py
django/orders/static/js/: orders_list.js
django/orders/templates/order_types/: detail.html  list.html
django/orders/templates/orders/: detail.html  form.html  list.html
django/orders/urls/: order_types.py  orders.py
django/orders/views/: __init__.py  order_types.py  orders.py
django/sales/: admin.py  models.py  urls.py  views.py
django/sales/locale/pt_BR/LC_MESSAGES/: django.po
django/sales/migrations/: 0001_initial.py
django/tasks/: admin.py  forms.py  models.py
django/tasks/locale/pt_BR/LC_MESSAGES/: django.po
django/tasks/migrations/: 0001_initial.py
django/tasks/static/js/: task_type_list.js  tasks_list.js
django/tasks/templates/task_types/: detail.html  form.html  list.html
django/tasks/templates/tasks/: detail.html  form.html  list.html
django/tasks/urls/: task_type.py  tasks.py
django/tasks/views/: __init__.py  task_type.py  tasks.py
django/tests/: conftest.py  test_dumbtest.py
django/tests/clients/: test_forms.py  test_models.py  test_views.py
