[tool.poetry]
name = "proj-ams"
version = "0.1.0"
description = "An Atelier Management System to help seamstresses manage orders, incomes, expenses, etc."
authors = ["Nicolas Battisti <nickgabrielbd@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "5.1.2"
psycopg2-binary = "2.9.9"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
